--- a/SHLX/Main/SHLX.csproj
+++ b/SHLX/Main/SHLX.csproj
@@ -71,6 +71,7 @@
       <HintPath>..\..\..\GMIS2008\BusinessConsole\bin\Debug\Interop.Excel.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
